perf(finance): optimize rent-cycles, leases, unit-bookings, batch ops, and mobile logout